* Version 0.9
 - add --no-kernel option by Adrian Perez de Castro to disable kernel message
   monitoring (#1727129 and #1751757)
 - convert source tree to use gnulib rather than random local replacements

* Version 0.8
 - tweak signal handlers some more (#1655169)
 - when dequeuing messages from the signal pipe, abort if malloc() failed
 - add hal filter to default metalog.conf (Gentoo Bug #174847)
 - add support from Eric Schwimmer / Debian for a new "postrotate_cmd"
   option (#1706160)
 - fix from Eric Schwimmer for div by zero error when maxtime = 0 (#1706158)
 - add support from Eric Schwimmer for controlling the "Last output repeated
   N times" message (#1706164)
 - use %e rather than %d for logging dates (Gentoo Bug #177258)

* Version 0.8-rc4
 - fix typo in previous change when checking the return of strftime()
   as reported by Mark Wagner.

* Version 0.8-rc3
 - use strftime() rather than printing out time values ourself so we get
   localization for free via the system libc and so we don't have to
   manipulate time structs ourselves (#1054478).

* Version 0.8-rc2
 - config file in package updated (pull fixes from Gentoo)
 - cleanup code a bit
 - make --help more [non-root] friendly
 - change default 'command spawn' messages to off (use --verbose to
   get back old noisy behavior)
 - check for setprogname() so we build on FreeBSD 6.1 (#1557585, fix
   from Diego Petteno)
 - fix error in memory allocation when using multiple facilities #1217560
 - queue up messages in signal handlers via a pipe so that we don't hit
   deadlocks by using functions that are unsafe for use inside these states

* Version 0.8-rc1
 - new keyword: break
 - config file in package updated (synch with break keyword)
 - kernel logging problem fix
 - race condition fix
 - metalog.conf man page added
 - log rotation can be disabled with maxsize or maxtime = 0

* Version 0.7
 - Logging is now synchronous by default. Use --async to get back to
   the asynchronous behavior.